# E-Commerce-Customer-Analytics-MLOps-Pipeline

./: Dockerfile  Dockerfile.mlflow  README.md  docker-compose.mlflow-streamlit.yml  docker-compose.override.yml  pyproject.toml  requirements.txt
.astro/: config.yaml
.dvc/: config
dags/: AB_Testing.py  CLV_Analysis.py  Churn_Prediction.py  Data_Preparation.py  RFM_and_Segmentation.py  customer_analytics_pipeline.py
data/: online_retail_II.csv.dvc
include/: AB_Testing.py  CLV_Analysis.py  Churn_Prediction.py  Data_Preparation.py  RFM_and_Segmentation.py
include/conf/: config.yaml
include/conf/hydra/: defaults.yaml
streamlit/: Dockerfile  app.py  model_utils.py  requirements.txt
